fix - Fixing servicesListItem bugs on mobile and laptop version

--- a/src/components/servicesListItem/style.css
+++ b/src/components/servicesListItem/style.css
@@ -97,7 +97,7 @@
 
 @media screen and (max-width: 780px) {
   .services__description {
-    white-space: wrap;
+    max-width: 404px;
   }
 }
 
@@ -105,6 +105,7 @@
   .services__item {
     flex: initial;
     gap: 4rem;
+    height: auto;
     padding: 0;
     box-shadow: none;
     border-radius: 0;
